welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:20: error: type mismatch;
 found   : Boolean(false)
 required: java.awt.Color
	var c:Color = false
                      ^