welcome.lessons.welcome.methods.slug.SlugSnail.scala.code
    def hunt(c:Color) { while (!estSurBiscuit) { 
		
	if (isFacingTrail) {
		avance() ;
		baisseBrosse();
		leveBrosse();
		
	}else{
		gauche();
		
	}

	}
	prendBiscuit();	
}

def isFacingTrail():Boolean = {
	var c:Color = false
	var x:Boolean = false
	
	if (!estFaceMur()) {
		
	
		avance() ;
	
	if (getCouleurSol==c) {
		recule();
		x=true;
	}else{
		recule(); }
	}
	
		return x ; 
	}
	











